# moulinet-sudoku-front-android

./: .gitignore  .gitmodules  README.md  check.sh
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/moulinet/tech/moulinet_sudoku_app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: file.txt
app/src/main/cpp/: native-lib.cpp
app/src/main/java/moulinet/tech/moulinet_sudoku_app/: MainActivity.java  Tutorial3View.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/moulinet/tech/moulinet_sudoku_app/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
